--- a/.github/workflows/workflow_call-build_images.yaml
+++ b/.github/workflows/workflow_call-build_images.yaml
@@ -232,7 +232,7 @@ jobs:
       - name: Download Digests
         uses: actions/download-artifact@v4
         with:
-          pattern: "${{ matrix.image.name }}-{linux,darwin}-{amd64,arm64}"
+          pattern: "${{ matrix.image.name }}-{linux,darwin}-{amd64,arm64,arm/v7}"
           merge-multiple: true
           path: /tmp/${{ matrix.image.name }}
 
