--- a/apps/cni-plugins/metadata.yaml
+++ b/apps/cni-plugins/metadata.yaml
@@ -1,17 +1,13 @@
-{
-    "app": "cni-plugins",
-    "base": false,
-    "channels": [
-      {
-        "name": "stable",
-        "platforms": [
-          "linux/amd64",
-          "linux/arm64"
-        ],
-        "stable": true,
-        "tests": {
-          "enabled": false
-        }
-      }
-    ]
-  }
+---
+app: "cni-plugins"
+base: false
+semantic_versioning: true
+channels:
+  - name: "stable"
+    platforms:
+      - linux/amd64
+      - linux/arm64
+    stable: true
+    tests:
+      enabled: false
+
