--- a/apps/mktxp/metadata.yaml
+++ b/apps/mktxp/metadata.yaml
@@ -1,12 +1,12 @@
 ---
-app: "kea-dhcp-sidecar"
+app: "mktxp"
 base: false
 semantic_versioning: true
 channels:
   - name: "stable"
     platforms:
-      - linux/amd64
       - linux/arm64
+      - linux/amd64
     stable: true
     tests:
       enabled: true
