--- a/apps/tuned/Dockerfile
+++ b/apps/tuned/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=$TARGETPLATFORM ghcr.io/onedr0p/alpine:rolling@sha256:3fbc581cb0fe29830376161ae026e2a765dcc11e1747477fe9ebf155720b8638
+FROM --platform=$TARGETPLATFORM docker.io/alpine:3.21.3
 
 ARG TARGETPLATFORM
 ARG BUILDPLATFORM
